[gd_scene load_steps=8 format=3 uid="uid://de4odmx7nioq"]

[ext_resource type="Script" path="res://main.gd" id="1_hhd5q"]
[ext_resource type="PackedScene" uid="uid://cfronu0hu0ckh" path="res://player.tscn" id="2_44nuw"]
[ext_resource type="PackedScene" uid="uid://bniafkg8n2s41" path="res://mob.tscn" id="2_biggw"]
[ext_resource type="AudioStream" uid="uid://c8pa7djpukdey" path="res://art/House In a Forest Loop.ogg" id="3_qxgqq"]
[ext_resource type="PackedScene" uid="uid://d64hel5psm3b" path="res://hud.tscn" id="4_joi23"]
[ext_resource type="AudioStream" uid="uid://dthnx47pqxtno" path="res://art/gameover.wav" id="4_wd7fw"]

[sub_resource type="Curve2D" id="Curve2D_hij4o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node"]
script = ExtResource("1_hhd5q")
mob_scene = ExtResource("2_biggw")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.898039, 0.2, 0.203922, 1)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qxgqq")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wd7fw")

[node name="Player" parent="." instance=ExtResource("2_44nuw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_hij4o")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_joi23")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
